💡 Document the warning about JOL's Java Agent failing to self-attach
Why:
- When configuring the Premain-Class manifest, JOL still gives the
  "Sense failed" warning. The reported state memory usage changes from
  15.5 MB to 14.8 MB, a 5% difference.
- Java Agents can prevent Application Class-Data Sharing, which is more
  important than slightly more accurate memory use statistics. That's
  why it was decided to not enable the Java Agent in prod.